fix: correct scrollbar styling by removing unnecessary comments

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5,10 +5,10 @@ body {
     overflow-x: hidden;
 }
 /* width */
-/* ::-webkit-scrollbar {
+::-webkit-scrollbar {
     width: 5px;
     height: 5px;
-} */
+}
 /* Track */
 ::-webkit-scrollbar-track {
     background: transparent;
